changed favicon img

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   <meta name="twitter:image" content="img/og-cover.jpg">
 
   <!-- Favicon set -->
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16.png">
-  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/dees.bread.logo.1.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/dees.bread.logo.1.png">
+  <link rel="shortcut icon" href="img/dees.bread.logo.1.png">
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <!-- (Opcional) Web App Manifest -->
   <!-- <link rel="manifest" href="manifest.webmanifest"> -->
